Fix admin nav link

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -46,7 +46,7 @@
                         <li><a href="/Orders/Schedule">Schedule</a></li>
                         @if (User.IsInRole("Admin"))
                         {
-                            <li><a href="/Admin/Index">Admin</a></li>
+                            <li><a href="/Admin">Admin</a></li>
                         }
                         <li class="dropdown">
                             <a href="#"><span>@User.Identity.Name</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
