Fix form action routing for payment workflow
- Fix SavePaymentMethod form action to POST to /Orders/SavePaymentMethod/{id} (was missing ID in URL)
- Fix UpdatePaymentMethod form action to POST to /Orders/UpdatePaymentMethod/{id}
- Remove redundant hidden input fields (id is now in route)
- All form submissions now route correctly to controller actions with ID parameter

This fixes the 405 Method Not Allowed errors that were occurring when users tried to submit forms.

--- a/Views/Orders/UpdatePaymentMethod.cshtml
+++ b/Views/Orders/UpdatePaymentMethod.cshtml
@@ -45,9 +45,7 @@
                     </div>
                 }
                 
-                <form method="post">
-                    <input type="hidden" name="id" value="@Model.Id" />
-                    
+                <form method="post" action="/Orders/UpdatePaymentMethod/@Model.Id">
                     <div class="mb-3">
                         <label class="form-label">Card Number</label>
                         <input type="text" name="cardNumber" class="form-control" placeholder="1234 5678 9012 3456" maxlength="19" required />
