--- a/Views/Orders/SavePaymentMethod.cshtml
+++ b/Views/Orders/SavePaymentMethod.cshtml
@@ -46,6 +46,8 @@
                 }
                 
                 <form method="post" action="/Orders/SavePaymentMethod/@Model.Id">
+                    @Html.AntiForgeryToken()
+                    
                     <div class="mb-3">
                         <label class="form-label">Card Number</label>
                         <input type="text" name="cardNumber" class="form-control" placeholder="1234 5678 9012 3456" maxlength="19" required />
