--- a/Views/Orders/Schedule.cshtml
+++ b/Views/Orders/Schedule.cshtml
@@ -15,6 +15,8 @@
 }
 
 <form method="post">
+    @Html.AntiForgeryToken()
+    
     <div class="mb-3">
         <label class="form-label">Service Type</label>
         <select class="form-select" name="serviceType" required>
